# ai-server

./: .gitignore  README.md  ROADMAP.md  VERSION.md  project-plan.md
benchmarks/: benchmark.sh
config/mcp/: obsidian.yaml  pyproject.toml  servers.yaml
config/mcp/src/personal_ai_mcp/: errors.py  models.py  proof_server.py
config/mcp/src/personal_ai_mcp/common/: limits.py
config/mcp/src/personal_ai_mcp/obsidian/: adapter.py  collection.py  config.py  manifest.py  schemas.py  server.py  tools.py
config/mcp/tests/: test_obsidian_adapter.py  test_obsidian_collection.py  test_obsidian_collection_integrity.py  test_obsidian_live.py  test_obsidian_remaining_tools.py  test_obsidian_server.py  test_obsidian_validation.py  test_openclaw_mcp_policy.py  test_platform_security.py  test_protocol_proof.py
config/mcp/tests/acceptance/: m06-agent-tests.md  run-m06-agent-tests.sh
config/mcp/tests/acceptance/results/: review.md
docs/: Backup.md  Models.md  (+4 more)
services/mcp/: pyproject.toml
services/mcp/config/: logging.yaml  servers.yaml  tool-policy.yaml
services/mcp/src/personal_ai_mcp/common/: adapter.py  errors.py  limits.py  models.py  validation.py
services/mcp/src/personal_ai_mcp/obsidian/: schemas.py  server.py  tools.py
services/mcp/src/personal_ai_mcp/platform/: commands.py  schemas.py  server.py  tools.py
services/mcp/tests/: conftest.py  test_obsidian_boundaries.py  test_obsidian_live.py  test_openclaw_policy.py  test_platform_live.py  test_platform_security.py  test_validation.py
services/mcp/tests/acceptance/: m06-agent-tests.md  run-m06-agent-tests.sh
(+235 files in other folders)
