[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-mcp"
version = "0.1.0"
description = "Read-only local MCP services for the personal AI platform"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.10,<2",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-timeout>=2.3,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires live local services"]
addopts = "-ra"
